feat(core): Integrate FFI-RS as native static dependency
- Added 'deps/ffi' (Rust source)

- Patched 'node.gyp' for static linking

- Architecture: Self-hosted Native FFI Engine

--- a/deps/ffi/Cargo.toml
+++ b/deps/ffi/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 edition = "2021"
-name = "ffi"
+name = "ffi_rs"
 version = "0.0.0"
 
 [lib]
-name = "ffi"
+name = "ffi_rs"
 crate-type = ["staticlib"]
 
 [dependencies]
