FIX(build): Resolve static linking failures for embedded Rust module
Patched Linux GYP configuration to enforce whole-archive inclusion of libffi_rs.a using -Wl,--whole-archive. This ensures that the 'ffi_rs_extension_entry' symbol is not discarded by the linker (ld) during the libnode/node binary compilation, resolving 'undefined reference' errors.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,6 +44,7 @@
       "domain": ["./lib/domain.js"],
       "events": ["./lib/events.js"],
       "fs": ["./lib/fs.js"],
+      "ffi": ["./lib/ffi.js"],
       "fs/promises": ["./lib/fs/promises.js"],
       "http": ["./lib/http.js"],
       "http2": ["./lib/http2.js"],
